touching up slides

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -205,6 +205,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "They are yet to find evidence of record linkage in cave drawings, but I feel that it's only a matter of time.\n",
+    "\n",
+    "https://upload.wikimedia.org/wikipedia/commons/d/d8/Hegman_Lake_Pictographs.jpg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
