touching up slides

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -181,8 +181,8 @@
     }
    },
    "source": [
-    "<a id=\"areas\"></a>\n",
-    "## Application areas"
+    "<a id=\"application\"></a>\n",
+    "## History and Application"
    ]
   },
   {
@@ -193,23 +193,16 @@
     }
    },
    "source": [
-    "Data matching is <i>not</i> new. \n",
+    "#### Data matching is <i>not</i> new. \n",
     "- Well before computers, we needed to match records belonging to the same individual.\n",
     "- Record-keeping, itself, goes all the way back to the beginning of written-language.\n",
     "\n",
     "<br>\n",
     "<center>\n",
-    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/3/3d/Rembrandt_-_Moses_with_the_Ten_Commandments_-_Google_Art_Project.jpg\" alt=\"Attempting the first join\" width=\"300\">\n",
-    "</center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "They are yet to find evidence of record linkage in cave drawings, but I feel that it's only a matter of time.\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/3/3d/Rembrandt_-_Moses_with_the_Ten_Commandments_-_Google_Art_Project.jpg\" alt=\"Early databases\" width=\"300\">\n",
+    "</center>\n",
     "\n",
-    "https://upload.wikimedia.org/wikipedia/commons/d/d8/Hegman_Lake_Pictographs.jpg"
+    "<center><i>An early attempt to join two databases.</i></center>"
    ]
   },
   {
@@ -220,7 +213,6 @@
     }
    },
    "source": [
-    "> I'd like to think that shortly after inventing the record, someone invented the typo, and thus needed record-linkage.\n",
     "> - But, in the interest of time, we'll skip ahead a few millenia..."
    ]
   },
@@ -239,7 +231,8 @@
     "#### National census\n",
     "- Governments around the world rely on census data to allocate resources appropriately.\n",
     "- RL plays an important role in improving the quality and accuracy of census data.\n",
-    "- The U.S. Census Bureau has played a major role in the development of RL techniques for several decades -- developed several popular algorithms widely used in RL today."
+    "\n",
+    "> The [U.S. Census Bureau](https://www.census.gov/) has played a major role in the development of RL techniques for several decades -- developed several popular algorithms widely used in RL today."
    ]
   },
   {
@@ -256,7 +249,9 @@
     "\n",
     "#### Medicine and public health \n",
     "- Simply consider all of the doctors, hospitals, insurance companies, and pharmacies you've interacted with and it becomes obvious why medical records are one of the largest RL application areas.\n",
-    "- In addition, <b>longitudinal-matching</b> of records can provide novel insights into health outcomes, as in the example given previously."
+    "- In addition, <b>longitudinal-matching</b> of records can provide novel insights into health outcomes, as in the example given previously.\n",
+    "\n",
+    "> In both the U.K. and Australia longitudinal data matching have been used successfully to measure health outcomes for hundreds of thousands of individuals using anonymized medical records, leading to valuable discoveries regarding disease, mortality, migration, and socio-economic outcomes."
    ]
   },
   {
@@ -290,7 +285,7 @@
     "\n",
     "#### Genealogy\n",
     "- Given that more than 10% of men and women were named 'John' and 'Mary' in nineteenth century England, it becomes obvious why RL is an invaluable tool for genealogical databases, some of which are now a billion-dollar industry.\n",
-    "    - [FamilySearch](https://en.wikipedia.org/wiki/FamilySearch) (i.e. Church of LDS) have invested heavily in RL and published several technical reports on the subject."
+    "> [FamilySearch](https://en.wikipedia.org/wiki/FamilySearch) (i.e. Church of LDS) have invested heavily in RL and have published several technical reports on the subject."
    ]
   },
   {
@@ -345,7 +340,7 @@
     "### Notebook contents\n",
     "- [Motivation](#motivation)\n",
     "    - [Quick example](#example)\n",
-    "    - [Application areas](#areas)\n",
+    "    - [History and Application](#application)\n",
     "    - [Why do I care?](#why)\n",
     "        - [Objectives](#objectives)\n",
     "- [Challenges](#challenges)\n",
@@ -2435,7 +2430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
