touching up slides

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -137,7 +137,7 @@
     }
    },
    "source": [
-    "And, if data were perfectly clean, this would all reduce to a simple `JOIN` operation.\n",
+    "And, if data were perfectly clean, this would all reduce to a simple [`JOIN`](https://en.wikipedia.org/wiki/Join_(SQL)) operation.\n",
     "#### But it's <i>not</i>.\n",
     "- This is why we need techniques to integrate inconsistent data.\n",
     "- Those techniques will be the focus of this talk."
@@ -251,7 +251,8 @@
     "- Simply consider all of the doctors, hospitals, insurance companies, and pharmacies you've interacted with and it becomes obvious why medical records are one of the largest RL application areas.\n",
     "- In addition, <b>longitudinal-matching</b> of records can provide novel insights into health outcomes, as in the example given previously.\n",
     "\n",
-    "> In both the U.K. and Australia longitudinal data matching have been used successfully to measure health outcomes for hundreds of thousands of individuals using anonymized medical records, leading to valuable discoveries regarding disease, mortality, migration, and socio-economic outcomes."
+    "> In both the U.K. and Australia longitudinal data matching have been used successfully to measure health outcomes for hundreds of thousands of individuals using anonymized medical records.\n",
+    "> - This has lead to valuable discoveries regarding disease, mortality, migration, and socio-economic outcomes."
    ]
   },
   {
@@ -308,10 +309,20 @@
     }
    },
    "source": [
-    "- As a society, we are producing more data than ever before. \n",
-    "    - In order to make use of it, we need intelligent solutions to integrate data from disparate sources.\n",
-    "- Such tools play an important role in both data mining _and_ data warehousing.\n",
-    "    - We can not only improve the quality (and statistical power) of our data, but also reveal relationships not contained within any single database."
+    "As a society, we are producing more data than ever before. \n",
+    "- In order to make use of it, we need intelligent solutions to integrate data from disparate sources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Such tools play an important role in both data mining _and_ data warehousing.\n",
+    "- We can not only improve the quality (and statistical power) of our data, but also reveal relationships not contained within any single database."
    ]
   },
   {
@@ -324,9 +335,11 @@
    "source": [
     "<a id=\"objectives\"></a>\n",
     "### Objectives\n",
-    "1. <i>First</i>, I want to make you aware of the specific, unique challenges involved with RL, so you can better appreciate why the approach includes the steps it does.\n",
-    "2. <i>Second</i>, I want to give you a snapshot of the classic record linkage approach.\n",
-    "3. <i>Third</i>, we will go through a demo together in which we compare the performance of a variety of classification models that we'll use for RL."
+    "<b>1.</b> Make you aware of the specific, unique challenges involved with RL, so you can better appreciate why the approach includes the steps it does.\n",
+    "\n",
+    "<b>2.</b> Give you a snapshot of the classic record linkage approach.\n",
+    "\n",
+    "<b>3.</b> Go through a demo together in which we compare the performance of a variety of classification models that we'll use for RL."
    ]
   },
   {
