--- a/prez.ipynb
+++ b/prez.ipynb
@@ -591,6 +591,18 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Let's break it down.\n",
+    "> We'll start with <i><b>pre-processing</b></i>..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -608,15 +620,17 @@
    },
    "source": [
     "Records from different databases often vary wildly in their formatting conventions.\n",
-    "\n",
+    "- Notice the inconsistencies below...\n",
     "<br>\n",
     "<center>\n",
-    "<img src=\"assets/record_examples.png\" alt=\"Example records\" width=\"800\">\n",
+    "    <img src=\"assets/record_example_A.png\" alt=\"Example record A\" width=\"800\">\n",
+    "</center>\n",
+    "<center>\n",
+    "    <img src=\"assets/record_example_B.png\" alt=\"Example record B\" width=\"801\">\n",
     "</center>\n",
     "\n",
-    "As a result, it falls to use to ensure that the data we want to compare has been properly <i>cleaned</i> and <i>standardized</i>.\n",
-    "- Any inconsistencies <i>must</i> be resolved for successful linkage.\n",
-    "- [REVIEW INCONSISTENCIES]"
+    "As a result, it falls to us to ensure that the data we want to compare has been properly <i>cleaned</i> and <i>standardized</i>.\n",
+    "- Any inconsistencies <i>must</i> be resolved for successful linkage."
    ]
   },
   {
@@ -651,7 +665,7 @@
     }
    },
    "source": [
-    "<b>2. Standardize abbreviations and correct typos</b>\n",
+    "<b>2. Standardize abbreviations and correct typpos</b>\n",
     "- Use hash mapping to reduce the variation of equivalent values."
    ]
   },
@@ -729,7 +743,7 @@
     "#### Outliers\n",
     "Smoothing or removing noisy values can also be detrimental to the accuracy of our linkage, so <i>it is usually not applied</i>.\n",
     "- Outliers can still contain useful information.\n",
-    "    - For example, an age of '150' could actually be a typo of '15', which would actually be fairly close in edit distance. \n",
+    "    - For example, an age of '250' could actually be a typo of '25', which would actually be fairly close in string similarity (e.g. edit distance). \n",
     "    - This information would be lost if smoothing were applied.\n",
     "- Our model won't see them anyway! \n",
     "    - Unusual values usually don't make it beyond the comparison step, so they aren't likely to strongly affect our predictions, anyways."
@@ -747,10 +761,11 @@
     "### Phonetic encoding\n",
     "As part of standardizing our data, we will often need to convert strings into their [phonetic encoding](https://en.wikipedia.org/wiki/Phonetic_algorithm).\n",
     "\n",
-    "- This allows us to compare words based on the way they are spoken, rather than the way they are spelled, since the latter can be more culturally-specific.\n",
-    "- Specifically, we will convert a string (typically a name, in this case) into a coded representation of how it is spoken.\n",
+    "- This allows us to compare words based on the way they are spoken, rather than the way they are spelled.\n",
+    "    - The latter can be more <i>regionally-specific</i>.\n",
+    "- Specifically, we will convert a string (e.g. a name) into a coded representation of how it is spoken.\n",
     "    - Example codes: Soundex, Phonex, Fuzzy Soundex\n",
-    "- These de-duplicated features can be useful for 'blocking', which we'll describe in the following section on Indexing.\n",
+    "- After encoding, these <i>de-duplicated features</i> can be useful for 'blocking', which we'll describe in the following section on Indexing.\n",
     "- These approaches are linguistic in nature, and so specific to a particular language (usually English)."
    ]
   },
@@ -792,7 +807,8 @@
    },
    "source": [
     "<b>Statistical</b> approaches to segmentation work by learning probability distributions regarding how elements in a field should be broken down into its constituent tokens.\n",
-    "- This approach entails classification of each element in a field as a particular token."
+    "- This approach entails classification of each element in a field as a particular token.\n",
+    "- More robust to changes in data formatting over time."
    ]
   },
   {
@@ -822,7 +838,7 @@
     "\n",
     "<br>\n",
     "<center>\n",
-    "    <img src=\"assets/record_clean.png\" alt=\"Example records\" width=\"900\">\n",
+    "    <img src=\"assets/record_clean.png\" alt=\"Example records\" width=\"1100\">\n",
     "</center>\n",
     "\n",
     "- Our data now contains all attributes from both databases.\n",
@@ -839,8 +855,12 @@
     }
    },
    "source": [
-    "<b>Minimally</b>, we should <i>at least</i> understand the number of unique values for each feature, as well as their frequency, and how many missing values each one contains.\n",
-    "- We will rely heavily on this information in the next stage: <i>indexing</i>."
+    "<b>After pre-processing</b>, we should <i>at least</i> understand:\n",
+    "1. the number of unique values for each feature\n",
+    "2. the frequency of those values, and how many missing values each feature contains\n",
+    "\n",
+    "\n",
+    "> We will rely heavily on this information in the next stage: <b>indexing</b>."
    ]
   },
   {
@@ -981,6 +1001,17 @@
    "source": [
     "#### Parallel processing\n",
     "Blocking is also an opportunity to leverage parallel processing approaches to decrease processing time, when that is applicable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "> After <b>indexing</b> is complete, we are ready to begin <i><b>making comparisons</b></i>.\n"
    ]
   },
   {
@@ -1288,6 +1319,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "> With our <b>comparisons</b> complete, we can begin the <b><i>assignment</i></b> step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -1305,7 +1347,9 @@
     }
    },
    "source": [
-    "Using our comparison vector, we can now classify each record pair as either a 'match' or 'non-match'."
+    "Using our comparison vector, we can now use a [<i>classification model</i>](https://en.wikipedia.org/wiki/Statistical_classification) to classify each record pair as either a \"match\" or \"non-match\".\n",
+    "- We'll skip the details, as standard modeling approaches are well-described.\n",
+    "- [This resource](http://faculty.marshall.usc.edu/gareth-james/ISL/) provides an excellent introduction to statistical learning methods."
    ]
   },
   {
@@ -1409,6 +1453,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "> After our <b>assignments</b> are complete, we can now begin <b><i>evaluating our results</i></b>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -1430,7 +1485,7 @@
     }
    },
    "source": [
-    "In the event we <i>do</i> have labeled data, we must still contend with a formidable class imbalance, between 'match' vs 'non-match' samples.\n",
+    "In the event we <i>do</i> have labeled data, we must still contend with a <i>formidable class imbalance</i>, between \"match\" vs \"non-match\" samples.\n",
     "- As a result, appropriate classification metrics must be applied.\n",
     "    - Accuracy (or misclassification rate), for example, can grow very high by classifying everything as 'non-match', making it less meaningful for assessing the quality of a set of linked records.\n",
     "    - Instead, precision and recall are used. \n",
@@ -1807,7 +1862,7 @@
     }
    },
    "source": [
-    "#### Let's view an example 'match' pair."
+    "#### Let's view an example \"match\" pair."
    ]
   },
   {
