adding classifcation section

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -1,6 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "\n",
+       ".rendered_html {\n",
+       "  font-size:1.00em;\n",
+       "}\n",
+       ".rendered_html table, .rendered_html th, .rendered_html tr, .rendered_html td {\n",
+       "     font-size: 100%;\n",
+       "}\n",
+       "\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<style>\n",
+    "\n",
+    ".rendered_html {\n",
+    "  font-size:1.00em;\n",
+    "}\n",
+    ".rendered_html table, .rendered_html th, .rendered_html tr, .rendered_html td {\n",
+    "     font-size: 100%;\n",
+    "}\n",
+    "\n",
+    "</style>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1022,8 +1067,8 @@
     }
    },
    "source": [
-    "<a id=\"classification\"></a>\n",
-    "## Comparison and classification\n",
+    "<a id=\"comparison\"></a>\n",
+    "## Comparison\n",
     "\n",
     "Next, the similarity between our candidate pairs is calculated by comparing several record attributes.\n",
     "\n",
@@ -1323,7 +1368,73 @@
     }
    },
    "source": [
-    "> With our <b>comparisons</b> complete, we can begin the <b><i>assignment</i></b> step."
+    "> With our <b>comparisons</b> complete, we can begin the <b><i>classification</i></b> step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<a id=\"classification\"></a>\n",
+    "## Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Using our comparison vector, we can now use a [<i>classification model</i>](https://en.wikipedia.org/wiki/Statistical_classification) to classify each record pair as either a \"match\" or \"non-match\".\n",
+    "- We'll skip most the details of the standard modeling approach, as they are well-described.\n",
+    "- [This resource](http://faculty.marshall.usc.edu/gareth-james/ISL/) provides an excellent introduction to statistical learning methods.\n",
+    "\n",
+    "# [INSERT FIGURE HERE]\n",
+    "# Show the basic modeling approach in one shot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In recent years, a variety of machine learning techniques have been used in record linkage. \n",
+    "- It has been recognized that the algorithm classically associated with record linkage -- the 'probabilistic' approach -- is equivalent to the [Naive Bayes classifier](https://en.wikipedia.org/wiki/Naive_Bayes_classifier).\n",
+    "    - As a result, it suffers from the same assumption of feature-independence (typically not true).\n",
+    "- Higher accuracy can often be achieved by using various other machine learning techniques, such as a single-layer [perceptron](https://en.wikipedia.org/wiki/Perceptron), which does not rely on the independence assumption."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### As always, the model you choose should depend on the complexity of the data.\n",
+    "- The greater the number of <i>complex field comparisons</i>, with many possible values, the more complex the comparison vector.\n",
+    "- A more complex model will be more able to utilize the information in those complex fields, giving it the potential to discriminate more accurately."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "> With the predictions of our classifiers in hand, we are now ready to proceed to the <b>assignment</b> step."
    ]
   },
   {
@@ -1343,26 +1454,13 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Using our comparison vector, we can now use a [<i>classification model</i>](https://en.wikipedia.org/wiki/Statistical_classification) to classify each record pair as either a \"match\" or \"non-match\".\n",
-    "- We'll skip the details, as standard modeling approaches are well-described.\n",
-    "- [This resource](http://faculty.marshall.usc.edu/gareth-james/ISL/) provides an excellent introduction to statistical learning methods."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
     "Given that this operation is performed on each record pair, <i>independently</i> of all other pairs, a given record may classify as a match for more than one record.\n",
     "- The simplest way to do this would be to use a greedy algorithm, but this would result in some assignments being not optimal due to the [transitive closure](https://en.wikipedia.org/wiki/Transitive_closure) problem.\n",
-    "- It's a classic [<i>assignment problem</i>](https://en.wikipedia.org/wiki/Assignment_problem)!\n",
+    "- It's a classic [<b><i>assignment problem</i></b>](https://en.wikipedia.org/wiki/Assignment_problem)!\n",
     "- It's an often-overlooked step in the RL process."
    ]
   },
@@ -1470,11 +1568,7 @@
    "source": [
     "<a id=\"evaluation\"></a>\n",
     "## Evaluation\n",
-    "Of course, we still need to determine how successful the linkage algorithm was, in terms of correctly identified pairs.\n",
-    "- To do so, we would prefer to have access to labeled data that can be used for validation.\n",
-    "- This would contain the true match status of all possible matches.\n",
-    "- With this, we can precisely evaluate the accuracy of the fitted classifier.\n",
-    "- As always, it is essential that testing data are different than the training data, otherwise <i>over-fitting</i> will occur!"
+    "---"
    ]
   },
   {
@@ -1485,10 +1579,45 @@
     }
    },
    "source": [
-    "In the event we <i>do</i> have labeled data, we must still contend with a <i>formidable class imbalance</i>, between \"match\" vs \"non-match\" samples.\n",
+    "Of course, we still need to determine how successful the linkage algorithm was, in terms of correctly identified pairs.\n",
+    "- To do so, we would prefer to have access to labeled data that can be used for validation.\n",
+    "- This would contain the true match status of all possible matches.\n",
+    "- With this, we can precisely evaluate the accuracy of the fitted classifier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "> <b>As always</b>, it is essential that testing data are different than the training data, otherwise <i>over-fitting will occur</i>!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In the event we <i>do</i> have labeled data, we must still contend with a <i>formidable <b>class imbalance</b></i>, between \"match\" vs \"non-match\" samples.\n",
     "- As a result, appropriate classification metrics must be applied.\n",
-    "    - Accuracy (or misclassification rate), for example, can grow very high by classifying everything as 'non-match', making it less meaningful for assessing the quality of a set of linked records.\n",
-    "    - Instead, precision and recall are used. \n",
+    "    - Accuracy (or misclassification rate), for example, can grow very high by classifying everything as \"non-match\", making it less meaningful for assessing the quality of a set of linked records."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Instead, [<i><b>precision</b></i> and <i><b>recall</b></i>](https://en.wikipedia.org/wiki/Precision_and_recall) are used. \n",
     "    - These can be combined into the [<i>$F$-measure</i>](https://en.wikipedia.org/wiki/F1_score), which is the harmonic mean of precision and recall.\n",
     "    - But, the <i>ideal</i> balance between precision and recall will <i>depend on your particular application</i> (medical diagnosis, fraud detection, etc.)."
    ]
@@ -1505,7 +1634,7 @@
     "In this talk, we'll focus on classifying record pairs as either a \"match\" or \"non-match\".\n",
     "- In fact, a third classification can sometimes be useful -- \"possible match\".\n",
     "- These records can then undergo clerical review, and the classified records can then be added to the training data for your model, thus improving your classifier.\n",
-    "- This is very often not feasible, however."
+    "- This is usually <i>not</i> feasible, however."
    ]
   },
   {
@@ -1518,8 +1647,17 @@
    "source": [
     "<a id=\"demo\"></a>\n",
     "# Demo\n",
-    "---\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "For this demo, we'll use the [Python Record Linkage Toolkit](https://recordlinkage.readthedocs.io/en/latest/about.html), a very popular and well-maintained library.\n",
     "- In addition, it comes with a dataset generator, the [Freely Extensible Biomedical Record Linkage](http://users.cecs.anu.edu.au/~Peter.Christen/Febrl/febrl-0.3/febrldoc-0.3/manual.html) (Febrl) package, which we'll use for a brief demo here."
    ]
