adding classifcation section

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -444,11 +444,12 @@
     "        - [Phonetic encoding](#phonetic)\n",
     "    - [Indexing (blocking)](#blocking)\n",
     "        - [Defining blocking keys](#keys)\n",
-    "    - [Comparison and classification](#classification)\n",
+    "    - [Comparison](#comparison)\n",
     "        - [Strings](#strings)\n",
     "        - [Numbers](#numbers)\n",
     "        - [Time](#time)\n",
     "        - [Space](#space)\n",
+    "    - [Classification](#classification)\n",
     "    - [Assignment](#assignment)\n",
     "    - [Evaluation](#evaluation)\n",
     "- [Demo](#demo)\n",
