added modeling figure

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -1396,8 +1396,9 @@
     "- We'll skip most the details of the standard modeling approach, as they are well-described.\n",
     "- [This resource](http://faculty.marshall.usc.edu/gareth-james/ISL/) provides an excellent introduction to statistical learning methods.\n",
     "\n",
-    "# [INSERT FIGURE HERE]\n",
-    "# Show the basic modeling approach in one shot"
+    "<center>\n",
+    "<img src=\"assets/model.png\" alt=\"Modeling example\" width=\"400\">\n",
+    "</center>"
    ]
   },
   {
