updated fig etc

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -370,8 +370,8 @@
     "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Seattle_physician_with_patient_1999.jpg/256px-Seattle_physician_with_patient_1999.jpg\" width=\"325\" alt=\"Seattle physician with patient 1999\" >\n",
     "</center>\n",
     "\n",
-    "> In both the U.K. and Australia longitudinal data matching has been used successfully to examine health outcomes for hundreds of thousands of individuals using anonymized medical records.\n",
-    "> - This has lead to valuable discoveries regarding disease, mortality, migration, and socio-economic outcomes in these places."
+    "> In both the U.K. and Australia longitudinal data matching has been used successfully to examine health outcomes for hundreds of thousands of individuals using anonymized (un-breachable) medical records.\n",
+    "> - This has lead to <b>valuable discoveries</b> regarding disease, mortality, migration, and socio-economic outcomes."
    ]
   },
   {
@@ -400,11 +400,11 @@
    },
    "source": [
     "#### Genealogy\n",
-    "- More than 10% of men and women were named 'John' and 'Mary', respectively, in 19th-century England.\n",
-    "- Such examples make it obvious why RL is an invaluable tool for genealogical databases, which are now a billion-dollar industry.\n",
+    "- <b><i>FACT:</i></b> More than 10% of men and women were named 'John' and 'Mary', respectively, in 19th-century England.\n",
+    "- Examples like these make it obvious why RL is an invaluable tool for genealogical databases, which are now a billion-dollar industry.\n",
     "\n",
     "<center>\n",
-    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/a/a8/1900_census_Kershaw_Lindauer.gif\" alt=\"1900 census Kershaw Lindauer.gif\" width=\"350|\">\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/a/a8/1900_census_Kershaw_Lindauer.gif\" alt=\"1900 census Kershaw Lindauer.gif\" width=\"400|\">\n",
     "</center>"
    ]
   },
@@ -527,7 +527,7 @@
     "i.e. <i>'Why can't I just `JOIN`?'</i>\n",
     "\n",
     "<center>\n",
-    "    <img src=\"https://png2.cleanpng.com/sh/b895f24ee4083f4c4a8db051d293259c/L0KzQYm3VME4N5Zwj5H0aYP2gLBuTfdqaZ95ReJqbnTkPcL8hgN1cZDzRd9qcnuwc73wkL1ieqUyiNN3ZHGwRbLrVvFkQGVmTtYAZEixSYK6WcA3PWo2TaQ9MEG7Q4GBVsg0PF91htk=/kisspng-giant-panda-question-mark-clip-art-panda-5ad6ac84a6d5d8.9139065915240183086834.png\" alt=\"Why??\" width=\"150\">\n",
+    "    <img src=\"assets/bear.png\" alt=\"Why??\" width=\"200\">\n",
     "</center>"
    ]
   },
@@ -631,8 +631,8 @@
    },
    "source": [
     "- The computational complexity - $O(N²)$ - of such an approach, however, <b>grows <i>quadratically</i> with the size of the smaller database</b>.\n",
-    "- This is fine for very small databases (hundreds of records), but becomes infeasible when dealing with today's typical databases (hundreds of thousands of records).\n",
-    "- As we'll see, some nice tricks exist to reduce the size of the problem <i>substantially</i>."
+    "- This is fine for very small databases (hundreds of records), but becomes infeasible when dealing with today's typical databases (>hundreds of thousands of records).\n",
+    "- As we'll see, some nice tricks exist to <i>substantially</i> reduce the size of the problem."
    ]
   },
   {
@@ -647,6 +647,7 @@
     "## Lack of training labels\n",
     "In the typical (supervised) machine learning approach, labeled training data is used as feedback by a statistical model during the process of training. \n",
     "- In some cases, the there is <i>no training data</i> that tells us if two records correspond to the same individual or not.\n",
+    "    - i.e. <i>'unsupervised'</i>\n",
     "- This can make the evaluation of the matches produced by a model especially challenging."
    ]
   },
@@ -683,20 +684,21 @@
     }
    },
    "source": [
-    "Most commonly, the records we seek to link refer to a real, live person (shown here).\n",
+    "Although, sometimes the entity to be matched is a business, product, or some other object...\n",
     "\n",
+    "- Most commonly, the records we seek to link refer to a real, live person (shown here).\n",
+    "\n",
+    "<br>\n",
     "<center>\n",
-    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/6/68/Akha_cropped_hires.JPG\" alt=\"People\" width=\"250\">\n",
-    "</center>\n",
-    "\n",
-    "- Although, sometimes the entity to be matched is a business, or some other object."
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/6/68/Akha_cropped_hires.JPG\" alt=\"People\" width=\"275\">\n",
+    "</center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -714,7 +716,7 @@
     }
    },
    "source": [
-    "In general, I will use 'record linkage' to refer to the matching of records between databases.\n",
+    "In general, I will use <i>'record linkage'</i> to refer to the matching of records between databases.\n",
     "- But, this includes the special case of <b><i>'de-duplication'</i></b>, which simply involves using the same approach to find duplicate records in a <i>single</i> database."
    ]
   },
@@ -889,7 +891,7 @@
    },
    "source": [
     "#### Outliers\n",
-    "Smoothing or removing noisy values can also be detrimental to the accuracy of our linkage, so <i>it is usually not applied</i>.\n",
+    "Smoothing or removing noisy values can also hurt the accuracy of our linkage, so <i>it is usually not applied</i>.\n",
     "- Outliers can still contain useful information.\n",
     "    - For example, an age of '250' could actually be a typo of '25', which would actually be fairly close in string similarity (e.g. edit distance). \n",
     "    - This information would be lost if smoothing were applied.\n",
@@ -928,13 +930,14 @@
     "<a id=\"segmentation\"></a>\n",
     "### Segmentation\n",
     "As part of feature engineering, we often break down many of our variables (e.g. full name) into several new variables (e.g. title, first name, last name).\n",
-    "- This is often the most challenging step in pre-processing, because of all the possible ways to parse our data into new features.\n",
-    "- In general, this will lead to better matching by making more information available during the comparison step.\n",
-    "\n",
     "<br>\n",
     "<center>\n",
-    "    <img src=\"assets/segmentation.png\" alt=\"Segmentation example\" width=\"600\">\n",
-    "</center>"
+    "    <img src=\"assets/segmentation.png\" alt=\"Segmentation example\" width=\"1000\">\n",
+    "</center>\n",
+    "\n",
+    "- This is often the most challenging step in pre-processing, because of all the possible ways to parse our data into new features.\n",
+    "- In general, this will lead to better matching by making more information available during the comparison step.\n",
+    "\n"
    ]
   },
   {
@@ -972,10 +975,10 @@
     }
    },
    "source": [
-    "The most popular tool for this approach has been the [<b>hidden Markov model</b>](https://en.wikipedia.org/wiki/Hidden_Markov_model).\n",
+    "The most popular tool for the statistical approach has been the [<b>hidden Markov model</b>](https://en.wikipedia.org/wiki/Hidden_Markov_model).\n",
     "- HMMs classify a given token depending on the classification of previous tokens.\n",
-    "- Like any other model, they need data to run. \n",
-    "- One approach is to manually tokenize and segment a handful of input values and labeling those tokens by hand, and then use this as a training data for a segmentation model.\n",
+    "- Like any other model, they need data to learn from. \n",
+    "- A common approach is to manually tokenize and segment a handful of input values and labeling those tokens by hand, and then use this as a training data for a segmentation model.\n",
     "- Notice, obtaining/creating data to train HMM is sometimes as much effort as assigning rules."
    ]
   },
@@ -991,7 +994,7 @@
     "\n",
     "<br>\n",
     "<center>\n",
-    "    <img src=\"assets/record_clean.png\" alt=\"Example records\" width=\"1100\">\n",
+    "    <img src=\"assets/record_clean.png\" alt=\"Example records\" width=\"1300\">\n",
     "</center>\n",
     "\n",
     "- Our data now contains all attributes from both databases.\n",
@@ -1029,6 +1032,7 @@
     "Now, we are ready to compare our records to look for a match.\n",
     "- But, if we are dealing with typical databases containing, say, a million or more records -- clearly we are not capable of comparing one trillion record pairs in a reasonable* time span.\n",
     "\n",
+    "<br></br>\n",
     "<div style=\"text-align: right\">*Ideally, we're talking minutes to hours, not days or weeks.</div>"
    ]
   },
@@ -1050,7 +1054,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1058,7 +1062,7 @@
     "> - As a result, we can reduce the complexity of our algorithm <i>substantially</i> by simply comparing only records matching on 'gender'.\n",
     ">\n",
     "> <center>\n",
-    "<img src=\"assets/blocking.png\" alt=\"Blocking example\" width=\"800\">\n",
+    "<img src=\"assets/blocking.png\" alt=\"Blocking example\" width=\"1000\">\n",
     "</center>"
    ]
   },
@@ -1071,7 +1075,7 @@
    },
    "source": [
     "<b><i>Blocking</i></b>, is a similar approach to indexing, which relies on a small number of such features to reduce the number of comparisons.\n",
-    "- In the example above, we would have two blocks - one for 'male' and one for 'female' - for each database.\n",
+    "- In the previous example, we would have two blocks - one for 'male' and one for 'female' - for each database.\n",
     "- 'zip code' and phonetically-encoded 'surname' are <i>much</i> better candidates for blocking.\n",
     "- For greater improvements in performance, it is also common to block using <i>multiple</i> variables, in succession."
    ]
@@ -1084,6 +1088,9 @@
     }
    },
    "source": [
+    "<br>\n",
+    "<img align=\"right\" src=\"assets/warning.png\" width=\"200\">\n",
+    "\n",
     "> <b>Warning!</b>: This approach does, however, sometimes miss certain matches that may, for example, contain a typo in one of the <i>blocking keys</i>.\n",
     "> - In the example above, the record would not have any chance of being matched in the event that 'gender' changed or was entered incorrectly.\n",
     "> - This highlights the need for careful selection of blocking criteria."
@@ -2927,7 +2934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
