--- a/prez.ipynb
+++ b/prez.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -53,13 +53,22 @@
     }
    },
    "source": [
-    "<img align=\"right\" src=\"https://avatars2.githubusercontent.com/u/15203083?s=460&u=4a00e83c5080312ed6311d4ab0e5f8ab362b0714&v=4\" width=\"200\" height=\"200\">\n",
+    "<center><h1>Data deduplication with Python</h1></center>\n",
+    "<center><h2>Applying modern tools to the 'classic' linkage approach.</h2></center>\n",
     "\n",
-    "# Hi!\n",
-    "\n",
-    "- I'm [Adam](https://www.adam-p-jones.com/).\n",
-    "    - I'm a [data scientist](https://www.linkedin.com/in/adam-p-jones/) with an interest in complex problems in healthcare.\n",
-    "    - Formerly a [Neuroscientist](https://pubmed.ncbi.nlm.nih.gov/?term=adam+p+jones) at the [NIH](https://www.nih.gov/).      "
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Today, I'm going to talk about <b>[record linkage](https://en.wikipedia.org/wiki/Record_linkage) (RL)</b> - <i>the process of matching multiple records that correspond to the same entity.</i>\n",
+    "- Records can be contained in <i>1 or more databases</i>."
    ]
   },
   {
@@ -71,18 +80,8 @@
    },
    "source": [
     "> #### Slides are at: [github.com/meccaLeccaHi/RL_pybay2020](https://github.com/meccaLeccaHi/RL_pybay2020)\n",
-    "- I'll paste the link in the group chat.\n",
-    "> - <b>`clone` it</b> and <i>follow along!</i>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
+    "- I'll paste the link in the group chat -- <b>`clone` it</b> and <i>follow along!</i>\n",
+    ">\n",
     "> #### Slack info: [ADD]\n",
     "> - Feel free to <b>ask questions</b>!"
    ]
@@ -91,12 +90,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "Today, I'm going to talk about <b>[record linkage](https://en.wikipedia.org/wiki/Record_linkage) <i>(RL)</i></b> - the process of matching multiple records that correspond to the same entity.\n",
-    "- Records can be contained in <i>1 or more databases</i>."
+    "<img align=\"right\" src=\"https://i.imgur.com/wr0gqAH.png\" width=\"300\" height=\"300\">\n",
+    "\n",
+    "# Hi!\n",
+    "\n",
+    "- I'm [Adam](https://www.adam-p-jones.com/).\n",
+    "    - I'm a [data scientist](https://www.linkedin.com/in/adam-p-jones/) with an interest in complex problems in healthcare.\n",
+    "    - Formerly a [Neuroscientist](https://pubmed.ncbi.nlm.nih.gov/?term=adam+p+jones) at the [NIH](https://www.nih.gov/).      "
    ]
   },
   {
@@ -399,24 +403,14 @@
     }
    },
    "source": [
-    "#### Genealogy\n",
-    "- <b><i>FACT:</i></b> More than 10% of men and women were named 'John' and 'Mary', respectively, in 19th-century England.\n",
-    "- Examples like these make it obvious why RL is an invaluable tool for genealogical databases, which are now a billion-dollar industry.\n",
+    "<br></br>\n",
     "\n",
-    "<center>\n",
-    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/a/a8/1900_census_Kershaw_Lindauer.gif\" alt=\"1900 census Kershaw Lindauer.gif\" width=\"400|\">\n",
-    "</center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "> [FamilySearch](https://en.wikipedia.org/wiki/FamilySearch) (i.e. Church of LDS) have invested heavily in RL and have published several technical reports on the subject."
+    "<img align=\"right\" src=\"https://upload.wikimedia.org/wikipedia/commons/a/a8/1900_census_Kershaw_Lindauer.gif\" alt=\"1900 census Kershaw Lindauer.gif\" width=\"400|\">\n",
+    "\n",
+    "#### Genealogy\n",
+    "> - <b><i>INTERESTING FACT:</i></b> More than 10% of men and women were named 'John' and 'Mary', respectively, in 19th-century England.\n",
+    "> - Examples like these make it obvious why RL is an invaluable tool for genealogical databases, which are now a billion-dollar industry.\n",
+    "> - [FamilySearch](https://en.wikipedia.org/wiki/FamilySearch) (i.e. Church of LDS) have invested heavily in RL and have published several technical reports on the subject."
    ]
   },
   {
